Added ranged damage value to kits items